Clean README and notebook: remove citation markers and add proper references

--- a/langsmith_llm_testing.ipynb
+++ b/langsmith_llm_testing.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "# Testing a Dummy LLM Chain with LangSmith\n",
     "\n",
-    "This notebook demonstrates how to evaluate a simple language‑model chain using [LangSmith](https://smith.langchain.com/).  LangSmith provides tools for debugging, evaluation, performance monitoring and observability so you can build reliable LLM applications【379625664723094†L49-L53】【379625664723094†L62-L71】.  Here we use a dummy chain to keep the example fully self‑contained; you can replace it with any LangChain chain or model.\n",
+    "This notebook demonstrates how to evaluate a simple language‑model chain using [LangSmith](https://smith.langchain.com/).  LangSmith provides tools for debugging, evaluation, performance monitoring and observability so you can build reliable LLM applications[1][1].  Here we use a dummy chain to keep the example fully self‑contained; you can replace it with any LangChain chain or model.\n",
     "\n",
     "We'll create a small dataset of questions and expected answers, run the dummy chain, compute a simple accuracy metric and (optionally) upload the results to LangSmith.\n"
    ]
@@ -177,9 +177,9 @@
    "metadata": {},
    "source": [
     "\n",
-    "In this notebook we built a miniature evaluation pipeline for a language‑model chain.  We created a dataset of question/answer pairs, defined a dummy chain that returns fixed answers, computed an accuracy metric and demonstrated how to upload the results to LangSmith.  In a real project you would replace the dummy chain with your own LangChain chain or call to an LLM, and you could use LangSmith's built‑in evaluators to measure metrics such as relevance, exact match or embedding similarity【379625664723094†L181-L200】.\n",
+    "In this notebook we built a miniature evaluation pipeline for a language‑model chain.  We created a dataset of question/answer pairs, defined a dummy chain that returns fixed answers, computed an accuracy metric and demonstrated how to upload the results to LangSmith.  In a real project you would replace the dummy chain with your own LangChain chain or call to an LLM, and you could use LangSmith's built‑in evaluators to measure metrics such as relevance, exact match or embedding similarity[1].\n",
     "\n",
-    "LangSmith's unified dashboard allows you to trace prompts and responses, debug errors and monitor performance in real time【379625664723094†L92-L103】.  Continuous evaluation and monitoring make it easier to keep your LLM application reliable as it grows and changes【379625664723094†L230-L302】.\n"
+    "LangSmith's unified dashboard allows you to trace prompts and responses, debug errors and monitor performance in real time[1].  Continuous evaluation and monitoring make it easier to keep your LLM application reliable as it grows and changes[1].\n"
    ]
   }
  ],
